Updated SBT Version & added initial sbt run